5. Преобразование матрицы чисел в список чисел. [#110228 #235872]